Finish bacnkend lecturer