@@ -1,6 +1,7 @@
 package com.cource.service.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -8,13 +9,12 @@ import com.cource.dto.attendance.AttendanceRequestDTO;
 import com.cource.entity.Attendance;
 import com.cource.entity.ClassSchedule;
 import com.cource.entity.Course;
-import com.cource.entity.CourseLecturer;
 import com.cource.entity.Enrollment;
 import com.cource.entity.User;
+import com.cource.exception.ResourceNotFoundException;
 import com.cource.repository.AttendanceRepository;
 import com.cource.repository.ClassScheduleRepository;
 import com.cource.repository.CourseLecturerRepository;
-import com.cource.repository.CourseRepository;
 import com.cource.repository.EnrollmentRepository;
 import com.cource.service.LecturerService;
 
@@ -41,56 +41,67 @@ public class LecturerServiceImpl implements LecturerService {
 
     @Override
     public List<Course> getCoursesByLecturerId(long lecturerId) {
-        return courseLecturerRepository.findCoursesByLecturerId(lecturerId).stream().map(CourseLecturer::getCourse)
-                .toList();
+        return courseLecturerRepository.findByLecturerId(lecturerId).stream()
+                .map(cl -> cl.getOffering().getCourse())
+                .distinct()
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<ClassSchedule> getClassSchedulesByLecturerId(long coursesId, long lecturerId) {
-        verifyOwnership(coursesId, lecturerId);
-        return classScheduleRepository.findByCourseIdAndLecturerId(coursesId, lecturerId);
+    public List<ClassSchedule> getClassSchedulesByLecturerId(long offeringId, long lecturerId) {
+        verifyOwnership(offeringId, lecturerId);
+        return classScheduleRepository.findByOfferingIdAndLecturerId(offeringId, lecturerId);
     }
 
     @Override
-    public List<User> getEnrolledStudents(long courseId, long lecturerId) {
-        verifyOwnership(courseId, lecturerId);
-        return enrollmentRepository.findEnrolledStudentsByCourseId(courseId).stream().map(Enrollment::getStudent)
-                .toList();
+    public List<User> getEnrolledStudents(long offeringId, long lecturerId) {
+        verifyOwnership(offeringId, lecturerId);
+        return enrollmentRepository.findByOfferingId(offeringId).stream()
+                .map(Enrollment::getStudent)
+                .collect(Collectors.toList());
     }
 
     @Override
     public void recordAttendance(AttendanceRequestDTO attendanceRequestDTO, long studentId, String status) {
-        verifyOwnership(
-                classScheduleRepository.findCourseIdByScheduleId(attendanceRequestDTO.getScheduleId()).orElseThrow()
-                        .getCourse().getId(),
-                attendanceRequestDTO.getLecturerId());
+        ClassSchedule schedule = classScheduleRepository.findById(attendanceRequestDTO.getScheduleId())
+                .orElseThrow(() -> new ResourceNotFoundException("Schedule not found"));
+        
+        verifyOwnership(schedule.getOffering().getId(), attendanceRequestDTO.getLecturerId());
+
+        Enrollment enrollment = enrollmentRepository.findByStudentIdAndOfferingId(
+                studentId, schedule.getOffering().getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Enrollment not found"));
 
         Attendance attendance = new Attendance();
-        attendance.setEnrollmentId(enrollmentRepository.findByStudentIdAndCourseId(studentId,
-                classScheduleRepository.findCourseIdByScheduleId(attendanceRequestDTO.getScheduleId()).orElseThrow()
-                        .getCourse().getId())
-                .orElseThrow().getId());
+        attendance.setEnrollment(enrollment);
+        attendance.setSchedule(schedule);
         attendance.setAttendanceDate(attendanceRequestDTO.getAttendanceDate());
-        attendance.setScheduleId(attendanceRequestDTO.getScheduleId());
-        attendance.setStudentId(studentId);
         attendance.setStatus(status);
-        attendance.setRecordedBy(attendanceRequestDTO.getLecturerId());
+        
+        User lecturer = new User();
+        lecturer.setId(attendanceRequestDTO.getLecturerId());
+        attendance.setRecordedBy(lecturer);
+        
+        if (attendanceRequestDTO.getNotes() != null) {
+            attendance.setNotes(attendanceRequestDTO.getNotes());
+        }
+        
         attendanceRepository.save(attendance);
-
     }
 
     @Override
     public List<Attendance> getAttendanceRecords(long scheduleId, long lecturerId) {
-        verifyOwnership(
-                classScheduleRepository.findCourseIdByScheduleId(scheduleId).orElseThrow().getCourse().getId(),
-                lecturerId);
+        ClassSchedule schedule = classScheduleRepository.findById(scheduleId)
+                .orElseThrow(() -> new ResourceNotFoundException("Schedule not found"));
+        
+        verifyOwnership(schedule.getOffering().getId(), lecturerId);
         return attendanceRepository.findByScheduleId(scheduleId);
     }
 
-    private void verifyOwnership(long courseId, long lecturerId) {
-        boolean isOwner = courseLecturerRepository.existsByCourseIdAndLecturerId(courseId, lecturerId);
+    private void verifyOwnership(long offeringId, long lecturerId) {
+        boolean isOwner = courseLecturerRepository.existsByOfferingIdAndLecturerId(offeringId, lecturerId);
         if (!isOwner) {
-            throw new SecurityException("Lecturer does not have access to this course.");
+            throw new SecurityException("Lecturer does not have access to this course offering.");
         }
     }
 
